modify: return object instead of array
